--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,6 +13,8 @@ services:
       DB_PASSWORD: 'root'
     ports:
       - '4001:3001'
+    networks:
+      - local_network
 
   db:
     image: postgres:15-alpine
@@ -24,3 +26,8 @@ services:
       - '5432:5432'
     volumes:
       - ./tmp/db-data:/var/lib/postgresql/data
+    networks:
+      - local_network
+networks:
+  local_network:
+    driver: bridge
