--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/db/typeorm.config.ts",
-    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/db/typeorm.config.ts",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/modules/db/typeorm.config.ts",
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/modules/db/typeorm.config.ts",
     "schema:sync": "npm run typeorm schema:sync -- -d src/db/typeorm.config.ts",
     "migration:show": "npm run typeorm migration:show -- -d src/db/typeorm.config.ts",
     "migration:generate": "npm run typeorm migration:generate -- -d src/db/typeorm.config.ts",
