--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,9 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/modules/db/typeorm.config.ts",
     "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/modules/db/typeorm.config.ts",
-    "schema:sync": "npm run typeorm schema:sync -- -d src/db/typeorm.config.ts",
-    "migration:show": "npm run typeorm migration:show -- -d src/db/typeorm.config.ts",
-    "migration:generate": "npm run typeorm migration:generate -- -d src/db/typeorm.config.ts",
+    "schema:sync": "npm run typeorm schema:sync -- -d src/modules/db/typeorm.config.ts",
+    "migration:show": "npm run typeorm migration:show -- -d src/modules/db/typeorm.config.ts",
+    "migration:generate": "npm run typeorm migration:generate -- -d src/modules/db/typeorm.config.ts",
     "migration:create": "npm run typeorm migration:create"
   },
   "dependencies": {
